@@ -4,6 +4,8 @@ Version 0.4.0 (unreleased)
     * Allow clicking with wand or fertilizer anywhere on tree trunk
     * Added wand item support to show tree type and fertilizer status
     * Fixed bug with ShowErrorsInClient config flag 
+    * Added code to hopefully address "Wrong Location" exceptions
+    * Fixed multiworld saving/loading
     
 Version 0.3.2 (05/24/2011)
     * Added detection of WorldGuard regions when trees are planted
